fix: z-index in mobile version

--- a/css/outline.css
+++ b/css/outline.css
@@ -18,6 +18,7 @@ body {
 main {
     width: 100vw;
     margin-right: 1rem;
+    z-index: -10;
 }
 
 footer {
@@ -115,6 +116,7 @@ nav {
     display: flex;
     align-items: center;
     text-align: right;
+    z-index: 100;
     /*padding: 1em 1em 2em 2em;*/
 }
 
@@ -208,7 +210,8 @@ p {
     flex-wrap: wrap;
 }
 
-/*.buttons {*/
+.buttons {
+    /*z-index: -100;*/
 /*    display: flex;*/
 /*    flex-wrap: wrap;*/
 /*}*/
@@ -219,7 +222,7 @@ p {
 /*    .container {*/
 /*        align-content: center;*/
 /*    }*/
-/*}*/
+}
 
 .button {
     display: inline-block;
@@ -488,6 +491,7 @@ h3 {
 }
 
 .pet {
+    /*z-index: -100;*/
     border-radius: 23px;
     margin-right: 2rem;
     margin-bottom: 5rem;
@@ -587,6 +591,7 @@ footer {
 }
 
 footer h6 {
+    /*z-index: -100;*/
     font-family: "Merriweather", sans-serif;
     font-weight: 400;
     margin-bottom: 20px;
@@ -618,6 +623,7 @@ footer {
     justify-content: space-evenly;
     margin-left: 0.5rem;
     flex-wrap: wrap;
+    /*z-index: -100;*/
     /*align-items: center;*/
 }
 
@@ -839,6 +845,7 @@ footer {
     }
 
     .homepage h1, .homepage p {
+        z-index: -100;
         /*text-align: center;*/
         width: 90vw;
     }
@@ -850,13 +857,18 @@ footer {
     }
 
     .step {
-        transition: all 0.25s cubic-bezier(0.5, 0.5, 0.5, 0.5) 0.15s;
+        transition: all 0.25s cubic-bezier(0.5, 0.5, 0.5, 0.5);
+    }
+
+    .info, .social_networks, .step, .pet, .buttons, .about_us {
+        z-index: -100;
     }
 }
 
 @media screen and (max-width: 955px) {
 
     .about_us h2, .about_us p {
+        z-index: -100;
         text-align: center;
         width: 100%;
         /*margin-left: 5rem;*/
@@ -872,6 +884,13 @@ footer {
 
 
 /* help.html */
+.make_donation, .become_volunteer {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    align-items: center;
+}
+
 .make_donation h1, .become_volunteer h1 {
     font-size: 40px;
     font-weight: 500;
@@ -879,12 +898,14 @@ footer {
 }
 
 .make_donation p, .become_volunteer p {
+    z-index: -100;
     margin-bottom: 2rem;
     margin-top: 1rem;
     text-align: center;
 }
 
 .pad.shadow {
+    z-index: -100;
     box-shadow: 0 10px 40px rgba(0, 0, 0, .2);
     font-family: "Merriweather",sans-serif;
     font-weight: 400;
@@ -910,7 +931,6 @@ input {
     border-radius: 4px;
     position: relative;
     border: 1px solid rgba(0,0,0,.1);
-    width: 100%;
     background-color: rgba(230, 206, 170, .01);
 }
 
@@ -919,7 +939,7 @@ form {
     flex-direction: column;
     align-items: stretch;
     text-align: left;
-    margin: 0rem 2rem;
+    margin: 0 2rem;
 }
 
 .full-width {
@@ -928,12 +948,7 @@ form {
     font-size: 18px;
 }
 
-.make_donation, .become_volunteer {
-    display: flex;
-    justify-content: space-around;
-    flex-direction: column;
-    align-items: center;
-}
+
 
 
 
